--- a/React/package.json
+++ b/React/package.json
@@ -4,14 +4,17 @@
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2",
-    "prettier": "^3.6.2"
+    "react-router-dom": "^7.8.2"
   }
 }
